2006-01-16  Stefan Jahn  <stefan@lkcc.org>

	* qucs-filter/qf_filter.cpp: Preliminary support for Cauer
	filters.  Many bugs here...

2006-01-14  Stefan Jahn  <stefan@lkcc.org>

	* configure.ac: Checking for Qt programs also in the
	$QTDIR/bin path.

2006-01-07  Stefan Jahn  <stefan@lkcc.org>

	* qucs-filter/qucsfilter.cpp (calculateFilter): Built in
	the cauer filter code by Vincent Habchi.

2005-11-15  Michael Margraf <michael.margraf@alumni.tu-berlin.de>

	* show cursor position in qucs-edit
	* extend Bessel coefficient table to order 19

2005-11-08  Michael Margraf <michael.margraf@alumni.tu-berlin.de>

	* fixed small bug in library search

2005-10-18  Stefan Jahn  <stefan@lkcc.org>

	* configure.ac: Fixed overwriting CXXFLAGS and CFLAGS
	environment variables via 'configure' command line.

2005-10-13  Michael Margraf <michael.margraf@alumni.tu-berlin.de>

	* add new libraries: Bridges, LEDs

2005-08-19  Michael Margraf <michael.margraf@alumni.tu-berlin.de>

	* add new components models to library, thanks to
	Leandro D'Archivio

2005-07-23  Stefan Jahn  <stefan@lkcc.org>

	* qucs-lib/qucslib.1: Added manpage for the QucsLib library
	manager program.

	* configure.ac: Finally fixed freebsd[456]* detection.

2005-07-22  Stefan Jahn  <stefan@lkcc.org>

	* configure.ac: Released version 0.0.7 and bumped up to version
	0.0.8.

2005-05-25  Stefan Jahn  <stefan@lkcc.org>

	* configure.ac: Released version 0.0.6 and bumped up to version
	0.0.7.

2005-05-11  Stefan Jahn  <stefan@lkcc.org>

	* qucs*.1: Updated manpages.

2005-03-01  Stefan Jahn  <stefan@lkcc.org>

	* configure.ac: Released version 0.0.5 and bumped up to version
	0.0.6.

2005-02-27  Stefan Jahn  <stefan@lkcc.org>

	* qucs-help/main.cpp, qucs-edit/main.cpp (main): Made the
	QucsHelp and QucsEdit applications relocatable using the
	environment variable QUCSDIR.

2005-02-23  Stefan Jahn  <stefan@lkcc.org>

	* THANKS: Corrected Toyoyuki Ishikawa's name at all locations
	in the project.
